Add scorekeeping and image buttons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 <body>
     <h1>Choose Your Weapon!</h1>
     <div class="button-container">
-        <button id="Rock">Rock</button>
-        <button id="Paper">Paper</button>
-        <button id="Scissors">Scissors</button>
+        <input id="Rock" type="image" src="rockfist.png">
+        <input id="Paper" type="image" src="paper.jpeg">
+        <input id="Scissors" type="image" src="scissors.jpeg">
     </div>
+    <div id="results"></div>
+    <div class="score-board">
+        <div class="score">
+            <h3>Player:</h3>
+            <div id="player-score">0</div>
+        </div>
+        <div class="score">
+            <h3>Computer:</h3>
+            <div id="computer-score">0</div>
+        </div>
+    </div>
+    <div class="footer">Images created using Craiyon AI image generator</div>
 </body>
 </html>
